# but-better

./: Makefile  demo.py  pyproject.toml
but_better/: __init__.py
docs/: index.html
tests/: test_but_better.py
