[project]
name = "but-better"
version = "0.3.0"
description = "Your code but better"
authors = [
    { name = "Carlos Trujillo", email = "carlos.trujillo@pymc-labs.com" },
    { name = "Niall Oulton", email = "niall.oulton@1749.io" },
    { name = "Ulf Aslak Lai", email = "ulfaslak@gmail.com" },
    { name = "Will Dean", email = "wd60622@gmail.com" },
]
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
]
dependencies = ["ipython"]

[project.urls]
Repository = "https://github.com/williambdean/but-better/"

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "rich>=13.7.1,<14",
    "pytest>=8.2.0,<9",
    "pytest-cov>=5.0.0,<6",
    "marimo>=0.13.2",
]

[tool.hatch.build.targets.sdist]
include = [
    "but_better",
    "but_better/py.typed",
]

[tool.hatch.build.targets.wheel]
include = [
    "but_better",
    "but_better/py.typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--cov=but_better --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
exclude = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = ["S101"]
